compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__modules__alias_constant.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "\nimport rocket_ship as boop\npub fn go() { boop.x }\n"
---
let
  mod''boop = builtins.import ./../rocket_ship.nix;
  
  go = {}: mod''boop.x;
in { inherit go; }
