compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__modules__alias_fn_call.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "\nimport rocket_ship as boop\npub fn go() { boop.go() }\n"
---
let
  boop' = builtins.import ./../rocket_ship.nix;
  
  go = {}: boop'.go {};
in { inherit go; }
