compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__modules__constant.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "\nimport rocket_ship\npub fn go() { rocket_ship.x }\n"
---
let
  mod''rocket_ship = builtins.import ./../rocket_ship.nix;
  
  go = {}: mod''rocket_ship.x;
in { inherit go; }
