compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__modules__different_package_import.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "import one\npub fn go() { one.go() }\n"
---
let
  mod''one = builtins.import ./../../other_package/one.nix;
  
  go = mod''one.go;
in { inherit go; }
