compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__modules__multiple_unqualified_fn_call.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "import rocket_ship.{a,b as bb}\npub fn go() { a() + bb() }\n"
---
let
  mod''rocket_ship = builtins.import ./../rocket_ship.nix;
  inherit (builtins.import ./../rocket_ship.nix) a;
  bb = (builtins.import ./../rocket_ship.nix).b;
  
  go = {}: (a {}) + (bb {});
in { inherit go; }
