compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__modules__nested_fn_call.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "import one/two\npub fn go() { two.go() }"
---
let
  mod''two = builtins.import ./../one/two.nix;
  
  go = {}: mod''two.go {};
in { inherit go; }
