compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__modules__nested_module_constant.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "\nimport rocket_ship/launcher\npub fn go() { launcher.x }\n"
---
let
  launcher' = builtins.import ./../rocket_ship/launcher.nix;
  
  go = {}: launcher'.x;
in { inherit go; }
