compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__modules__nested_nested_fn_call.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "import one/two/three\npub fn go() { three.go() }"
---
let
  mod''three = builtins.import ./../one/two/three.nix;
  
  go = {}: mod''three.go {};
in { inherit go; }
